# FH6Auto

./: .editorconfig  .gitignore  README.md  TODO  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  version.json
assets/config/: config_example.json
backend/fh6auto/: bootstrap.py  config.py  paths.py  recovery.py
backend/fh6auto/automation/: recovery.py  window.py
backend/fh6auto/backend/: __init__.py  api.py  app.py  composition.py  config_service.py  runtime.py  state.py
backend/fh6auto/flows/: auto_wheelspin.py  buy_car.py  mastery.py  race.py  remove_car.py
backend/fh6auto/input/: __init__.py  actions.py  controllers.py  win_input.py
backend/fh6auto/vision/: __init__.py  cache.py  car_cards.py  footer.py  manufacturer.py  matcher.py  ocr.py  player_stats.py  polling.py  text.py  timing.py  waits.py
docs/: development.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js
frontend/src/: App.vue  main.js  styles.css
frontend/src/plugins/: index.ts
frontend/src/router/: index.ts
src/fh6auto/: __init__.py  config.py  paths.py  version.py
src/fh6auto/automation/: __init__.py  recovery.py  window.py
src/fh6auto/backend/: api.py  app.py  composition.py  config_service.py  runtime.py  state.py
src/fh6auto/flows/: auto_wheelspin.py  buy_car.py  mastery.py  race.py  remove_car.py
src/fh6auto/input/: actions.py  controllers.py  win_input.py
src/fh6auto/vision/: __init__.py  cache.py  matcher.py  ocr.py  waits.py
